--- a/PSC/.settings/org.eclipse.core.resources.prefs
+++ b/PSC/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,10 @@
 eclipse.preferences.version=1
 encoding//src/affichageEtTests/Fenetre.java=UTF-8
+encoding//src/affichageEtTests/FenetreTempsReel.java=UTF-8
 encoding//src/comparaison/Analyse.java=UTF-8
 encoding//src/comparaison/Minuties.java=UTF-8
+encoding//src/gestionIO/PaveTUIO.java=UTF-8
 encoding//src/gui/Main.java=UTF-8
+encoding//src/minuties/Minuties.java=UTF-8
 encoding//src/objets/DonneesPoint.java=UTF-8
 encoding//src/objets/Signature.java=UTF-8
