--- a/PSC/.settings/org.eclipse.core.resources.prefs
+++ b/PSC/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/affichageEtTests/Fenetre.java=UTF-8
 encoding//src/affichageEtTests/FenetreTempsReel.java=UTF-8
 encoding//src/comparaison/Analyse.java=UTF-8
+encoding//src/comparaison/Comparaison.java=UTF-8
 encoding//src/comparaison/Minuties.java=UTF-8
 encoding//src/gestionIO/PaveTUIO.java=UTF-8
 encoding//src/gui/Main.java=UTF-8
