Modifie le fichier .classpath pour utiliser glulogicMT
- Important : glulogicMT sera accessible si votre projet JAVA est bien
nommé "PSC" en local

--- a/PSC/.classpath
+++ b/PSC/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="lib/libTUIO.jar"/>
 	<classpathentry kind="lib" path="lib/GlulogicMT.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="PSC TEST/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="PSC/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
